REGRESSION(r259401): [GTK] Check surroundingRange is not null https://bugs.webkit.org/show_bug.cgi?id=209966

Reviewed by Darin Adler & Philippe Normand.

* WebProcess/WebPage/glib/WebPageGLib.cpp:
(WebKit::WebPage::getPlatformEditorState const):


Canonical link: https://commits.webkit.org/222889@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259468 268f45cc-cd09-0410-ab3c-d52691b4dbfc